[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quants-lab"
version = "0.1.0"
description = "A project description"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "1.4"
hummingbot = "*"
numpy = "1.26.4"
plotly = "*"
pycoingecko = "*"
geckoterminal-py = "*"
glom = "*"
defillama = "*"
statsmodels = "*"
pandas-ta = "0.3.14b"
pyyaml = "*"
jupyter = "*"
optuna = "*"
optuna-dashboard = "*"
pathlib = "*"
pydantic = "1.10.4"
scikit-learn = "*"
commlib-py = "*"
rich = "*"
python-dotenv = "*"
asyncpg = "*"

[tool.poetry.dev-dependencies]
pre-commit = "*"
isort = "*"
flake8 = "*"

[tool.black]
line-length = 130
target-version = ["py310"]

[tool.isort]
line_length = 130
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = true

[tool.pre-commit]
repos = [
    { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v3.4.0", hooks = [{ id = "check-yaml" }, { id = "end-of-file-fixer" }] },
    { repo = "https://github.com/psf/black", rev = "21.6b0", hooks = [{ id = "black" }] },
    { repo = "https://github.com/pre-commit/mirrors-isort", rev = "v5.9.3", hooks = [{ id = "isort" }] }
]
